--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <title>Salemtech</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="description" content="presatdores de servicios tecnologicos a la medida del cliente">
+  <meta name="keywords" content="palabras tecnoloia, informatica, ingenieros, empresa">
+  <meta name="author" content="Salemtech">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
