--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
   <meta name="description" content="presatdores de servicios tecnologicos a la medida del cliente">
   <meta name="keywords" content="palabras tecnoloia, informatica, ingenieros, empresa">
   <meta name="author" content="Salemtech">
-  <title>Salemtech</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/salem_final.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
