--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
   <meta name="author" content="Salemtech">
   <link rel="icon" type="image/x-icon" href="assets/salem_final.png">
   <link href="https://fonts.googleapis.com/css2?family=Guton&display=swap" rel="stylesheet">
- <link href="https://fonts.googleapis.com/css2?family=Guton:wght@400&display=swap" rel="stylesheet">
+ <!-- Elimina este enlace si está incorrecto -->
+
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
