--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,7 @@
   <meta name="keywords" content="palabras tecnoloia, informatica, ingenieros, empresa">
   <meta name="author" content="Salemtech">
   <link rel="icon" type="image/x-icon" href="assets/salem_final.png">
-  <link href="https://fonts.googleapis.com/css2?family=Guton&display=swap" rel="stylesheet">
- <!-- Elimina este enlace si está incorrecto -->
-
+ 
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,6 +18,7 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   rel="stylesheet"
 />
+<link rel="stylesheet" type="text/css" media="screen" href="./assets/fonts/Guton-Variants.scss" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
