--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="presatdores de servicios tecnologicos a la medida del cliente">
   <meta name="keywords" content="palabras tecnoloia, informatica, ingenieros, empresa">
   <meta name="author" content="Salemtech">
-  <link rel="icon" type="image/x-icon" href="assets/salem_final.png">
+  <link rel="icon" type="image/png" href="assets/blanco.png">
  
 
 
